test/fails/bad_tags/decl2.lgl
tag a is mat2x2; // Cannot tag matrices